# pyxel

./: .gitignore  AUTHORS  LICENSE  README.md  csmajr_session.ipynb  csmajr_session.py  dic_composite.py  example_1.py  example_1bis.py  example_2.py  example_3.py  example_4.py  example_5.py  example_6.py  example_7.py  example_8.py  pyproject.toml  pyxel.py  setup.cfg  setup.py  tutorial.ipynb  tutorial.py  vtktools.py
__pycache__/: pyxel.SubQuaIso-163.py38.1.nbc  pyxel.SubQuaIso-163.py38.nbi  pyxel.SubTriIso-180.py38.1.nbc  pyxel.SubTriIso-180.py38.nbi  pyxel.SubTriIso2-230.py38.1.nbc  pyxel.SubTriIso2-230.py38.nbi  pyxel.meshgrid-174.py38.1.nbc  pyxel.meshgrid-174.py38.2.nbc  pyxel.meshgrid-174.py38.nbi
data/dic_composite/: abaqus_q4_m.inp  example_1.py  example_1bis.py  example_2.pvd  example_2.py  example_3.py  example_4.py  example_5.py  example_6.py  example_7.py  example_8.py  gmsh_t3_mm.msh  toto.pvd  zoom-0050_1.tif  zoom-0054_1.tif  zoom-0062_1.tif  zoom-0074_1.tif  zoom-0075_1.tif
data/dvc_test_2/: speckle_generation.py
data/static/: Mesh.vtu  example_2D.py  example_2DAxi.py  example_3D.py  hex8.inp
data/transient_dyn/: transient-example.py
pyxel/: __init__.py  camera.py  dic.py  exportpixmap.py  image.py  material.py  mesh.py  mesher.py  meshparser.py  utils.py  vtktools.py
pyxel/__pycache__/: mesh.SubQuaIso-133.py38.1.nbc  mesh.SubQuaIso-133.py38.nbi  mesh.SubQuaIso-162.py38.1.nbc  mesh.SubQuaIso-162.py38.nbi  mesh.SubQuaIso-163.py38.1.nbc  mesh.SubQuaIso-163.py38.nbi  mesh.SubQuaIso-201.py38.1.nbc  mesh.SubQuaIso-201.py38.nbi  mesh.SubQuaIso-219.py38.1.nbc  mesh.SubQuaIso-219.py38.nbi  mesh.SubQuaIso-222.py38.1.nbc  mesh.SubQuaIso-222.py38.nbi  mesh.SubTriIso-144.py38.1.nbc  mesh.SubTriIso-144.py38.nbi  mesh.SubTriIso-146.py38.1.nbc  mesh.SubTriIso-146.py38.nbi  mesh.SubTriIso-168.py38.1.nbc  mesh.SubTriIso-168.py38.nbi  mesh.SubTriIso-173.py38.1.nbc  mesh.SubTriIso-173.py38.nbi  mesh.SubTriIso-174.py38.1.nbc  mesh.SubTriIso-174.py38.nbi  mesh.SubTriIso-227.py38.1.nbc  mesh.SubTriIso-227.py38.nbi  mesh.SubTriIso-230.py38.1.nbc  mesh.SubTriIso-230.py38.nbi  mesh.SubTriIso-233.py38.1.nbc  mesh.SubTriIso-233.py38.nbi  mesh.SubTriIso2-194.py38.1.nbc  mesh.SubTriIso2-194.py38.2.nbc  mesh.SubTriIso2-194.py38.nbi  mesh.SubTriIso2-196.py38.1.nbc  mesh.SubTriIso2-196.py38.nbi  mesh.SubTriIso2-218.py38.1.nbc  mesh.SubTriIso2-218.py38.nbi  mesh.SubTriIso2-223.py38.1.nbc  mesh.SubTriIso2-223.py38.nbi  mesh.SubTriIso2-277.py38.1.nbc  mesh.SubTriIso2-277.py38.nbi  mesh.SubTriIso2-280.py38.1.nbc  (+18 more)
src/pyxel/: __init__.py  bspline_patch.py  bspline_routines.py  calibration.py  camera.py  dic.py  exportpixmap.py  image.py  levelset.py  material.py  mesh.py  mesher.py  meshparser.py  utils.py  vtktools.py
src/pyxel_dic.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: unit_tests.py
tests/calibration/: calib_from_VIC_file.py  calibration_script.py  calibration_sys1.txt  left_cam_params.npz  rig_params.npz  right_cam_params.npz
tests/dic_composite/: abaqus_q4_m.inp  bride.msh  example_1.py  example_10.py  example_11.py  example_1bis.py  example_2.py  example_3.py  example_4.py  example_5.py  example_6.py  mesh.msh  (+14 more)
vtk/: example_1.vtu
(+117 files in other folders)
