[metadata]
name = pyxel
version = 2.1
author = Jean-Charles Passieux
author_email = ica.cnrs.fr/author/jcpassieux
description = python library for experimental mechanics using finite elements
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jcpassieux/pyxel
project_urls =
    Bug Tracker = https://github.com/jcpassieux/pyxel
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: CeCILL FREE SOFTWARE LICENSE AGREEMENT
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src