[metadata]
name = pyxel-dic
version = 3.0.1
author = Jean-Charles Passieux
author_email = passieux@insa-toulouse.fr

description = Finite Element (FE) Digital Image/Volume Correlation (DIC/DVC) library for experimental mechanics
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jcpassieux/pyxel
project_urls =
    Bug Tracker = https://github.com/jcpassieux/pyxel/issues

license = CeCILL
license_files = LICENSE.txt

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: CeCILL License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires = 
    numpy >= 1.24.2
    matplotlib >= 3.7.0
    scipy
    gmsh
    meshio
    opencv-python
    scikit-image
    

python_requires = >=3.6

[options.packages.find]
where = src